--- a/play-with-angular/projects/shop-ui/src/app/app.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/app.component.html
@@ -1,50 +1,5 @@
 <div class="container">
-  <div class="display-1">{{ title }}</div>
+  <app-navbar [title]="title"></app-navbar>
   <hr />
-
-  <div *ngFor="let product of products" class="list-group">
-    <div class="list-group-item">
-      <div class="row" *ngIf="product.isAvailable">
-        <div class="col-4">
-          <img alt="" [src]="product.imagePath" class="img-fluid" />
-        </div>
-        <div class="col-8">
-          <div>{{ product.name }}</div>
-          <div>{{ product.price }}</div>
-          <button (click)="handleAddToCart($event)" class="btn btn-dark">
-            Add to cart
-          </button>
-          <ul class="nav nav-tabs mt-3 mb-2">
-            <li class="nav-item">
-              <a
-                [ngClass]="{ active: isTabSelected(1), 'nav-link': true }"
-                href="#"
-                (click)="handleTabChange($event, 1)"
-                >Description</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                [ngClass]="{ active: isTabSelected(2), 'nav-link': true }"
-                href="#"
-                (click)="handleTabChange($event, 2)"
-                >Specification</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                [ngClass]="{ active: isTabSelected(3), 'nav-link': true }"
-                href="#"
-                (click)="handleTabChange($event, 3)"
-                >Reviews</a
-              >
-            </li>
-          </ul>
-          <div *ngIf="isTabSelected(1)">{{ product.description }}</div>
-          <div *ngIf="isTabSelected(2)">Not Yet</div>
-          <div *ngIf="isTabSelected(3)">None Yet</div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <app-product-list></app-product-list>
 </div>
