--- a/play-with-angular/projects/shop-ui/src/app/cart-view/cart-view.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/cart-view/cart-view.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <div class="card-header">Item(s) in cart</div>
+    <div class="card-header" #cardHeader>Item(s) in cart</div>
     <div class="card-body">
         <table class="table">
             <thead>
@@ -10,12 +10,18 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let cartLine of cart">
+                <tr appHighlight *ngFor="let cartLine of cart" #tableRows>
                     <td>{{ cartLine.name }}</td>
-                    <td>{{ cartLine.price}}</td>
-                    <td><button class="btn btn-danger">Remove</button></td>
+                    <td>{{ cartLine.price.amount|currency:cartLine.price.currencyCode}}</td>
+                    <td><button (click)="handleRemove(cartLine)" class="btn btn-danger">Remove</button></td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr>
+                    <td>{{ tickCount }}</td>
+                    <td><ng-content select=".slot1"></ng-content></td>
+                    <td><ng-content select=".slot2"></ng-content></td>
+                </tr>
         </table>
     </div>
 </div>
