--- a/play-with-angular/projects/shop-ui/src/app/product-list/product-list.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/product-list/product-list.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let p of products" class="list-group">
     <div class="list-group-item">
-        <app-product [value]="p" (buy)="handleBuy($event)"></app-product>
+        <app-product [value]="p"></app-product>
     </div>
 </div>
