--- a/play-with-angular/projects/shop-ui/src/app/app.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/app.component.html
@@ -3,15 +3,20 @@
   <hr />
   <app-cart-badge></app-cart-badge>
   <hr />
-  <button (click)="toggleCart()">toggle cart</button>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/']">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/products']">Products</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/cart']">Cart</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+    </li>
+  </ul>
   <hr />
-
-  <app-cart-view *ngIf="isCartOpen">
-    <div #h class="slot1">hello</div>
-    <div #w class="slot2">world</div>
-  </app-cart-view>
-
-  <hr />
-  <!-- <app-foo></app-foo> -->
-  <app-product-list></app-product-list>
+  <router-outlet></router-outlet>
 </div>
