--- a/play-with-angular/projects/shop-ui/src/app/app.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/app.component.html
@@ -5,7 +5,7 @@
   <hr />
   <ul class="nav nav-pills">
     <li class="nav-item">
-      <a class="nav-link" aria-current="page" routerLinkActive="active" [routerLink]="['/']">Home</a>
+      <a class="nav-link" aria-current="page"  href="'/'">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/products']">Products</a>
