--- a/play-with-angular/projects/shop-ui/src/app/cart-view/cart-view.component.html
+++ b/play-with-angular/projects/shop-ui/src/app/cart-view/cart-view.component.html
@@ -18,7 +18,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td>{{ tickCount }}</td>
+                    <!-- <td>{{ tickCount }}</td> -->
                     <td><ng-content select=".slot1"></ng-content></td>
                     <td><ng-content select=".slot2"></ng-content></td>
                 </tr>
